--- a/events-3.html
+++ b/events-3.html
@@ -185,7 +185,7 @@
           <div class="col-md-4 l-posts">
             <h3 class="widgetheading">Quick Links</h3>
             <ul>
-              <li><a href="ourstory.html">Rewards</a></li>
+              <li><a href="rewards.html">Rewards</a></li>
               <li><a href="events.html">Events</a></li>
               <li><a href="gallery.html">Gallery</a></li>
               <li><a href="contact.html">Contact</a></li>
