--- a/gallery.html
+++ b/gallery.html
@@ -54,7 +54,7 @@
   <section id="section-works" class="section appear clearfix">
     <div class="container">
       <div class="row">
-        <nav id="filter" class="col-md-12 text-center">
+        <nav id="filter" class="col-md-12 col-xs-12 text-center">
           <ul>
             <li><a href="#" class="current btn-theme btn-small" data-filter="*">All</a></li>
             <li><a href="#" class="btn-theme btn-small" data-filter=".achievements">Achievements</a></li>
