--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="description" content="Robotics Website">
-  <meta name="keywords" content="Discovery">
+  <meta name="keywords" content="Discovery enicarthage">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Discovery Club</title>
